alignment issues

--- a/css/css/theme.css
+++ b/css/css/theme.css
@@ -31,7 +31,6 @@ html, body {
 }
 
 .skills-container {
-  text-align: center;
   font-size: 18px;
 }
 
